apphub/kubernetes/app-hub.yaml
# POD with app-hub and nginx to redirect to the different app containers
# - it initializes an empty nginx.conf file in a volumeMount (temporary fs to share files between containers of the POD)
apiVersion: v1
kind: Pod
metadata:
  name: proxy-app-hub
  labels:
    app: app-hub
    # Label used by get_container_ip. The value is defined in "env" with APP_HUB_NAME variable
    app-user: t4hub-container
spec:
  serviceAccountName: internal-kubectl
  restartPolicy: OnFailure
  volumes:
    - name: nginx-conf
      emptyDir: {}
  containers:
    - name: app-hub
      # TODO How load image with k3s and with EKS??
      image: localhost:5000/opendx28/tslicerh:latest
      imagePullPolicy: Always
      ports:
      - containerPort: 8080
      volumeMounts:
        - mountPath: /app/proxy
          name: nginx-conf
    - name: nginx-container
      resources:
        requests:
          memory: "64Mi"
          cpu: "250m"
        limits:
          memory: "128Mi"
          cpu: "500m"
      image: nginx:latest
      imagePullPolicy: Always
      ports:
      - containerPort: 80
      volumeMounts:
        - mountPath: /etc/nginx
          name: nginx-conf

#---
#apiVersion: v1
#kind: PersistentVolume
#metadata:
#  name: nfs-pv
#spec:
#  capacity:
#    storage: 10Gi
#  accessModes:
#    - ReadWriteMany
#  persistentVolumeReclaimPolicy: Retain
#  nfs:
#    # TODO Change to the path and host name (as seen by k8s master)
#    path:
#    server:


---
# Cluster service for proxy-shub pod. This Cluster svc will be not accessible from outside it is ment to be reached
#  internally by ingress
apiVersion: v1
kind: Service
metadata:
  name: apphub-svc-cluster
spec:
  selector:
    app: app-hub
  ports:
    - protocol: TCP
      port: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-apphub
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
  - hosts:
    - 3dslicerhub.medtec4susdev.org
    secretName: myapp-cert
  ingressClassName: traefik
  rules:
    - host: 3dslicerhub.medtec4susdev.org
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: shub-svc-cluster
              port:
                number: 80
                
---
# PostgreSQL
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgresql
  template:
    metadata:
      labels:
        app: postgresql
    spec:
      containers:
      - name: postgresql
        image: postgres:latest
        ports:
        - containerPort: 5432
---
# Expose PostgreSQL to the cluster
apiVersion: v1
kind: Service
metadata:
  name: postgresql
spec:
  selector:
    app: postgresql
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
